RESOLVED FIXED165900
[GStreamer][MSE] Fix build warning in MediaPlayerPrivateGStreamer.cpp using gcc 6.2
https://bugs.webkit.org/show_bug.cgi?id=165900
Summary [GStreamer][MSE] Fix build warning in MediaPlayerPrivateGStreamer.cpp using g...
Enrique Ocaña
Reported 2016-12-15 08:45:53 PST
The following build warning is shown when building WebKitGTK+ with gcc 6.2: .../WebKit/Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp:769:67: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
Attachments
Patch (1.68 KB, patch)
2016-12-16 02:10 PST, Enrique Ocaña
no flags
Enrique Ocaña
Comment 1 2016-12-16 02:10:42 PST
WebKit Commit Bot
Comment 2 2016-12-16 03:50:56 PST
Comment on attachment 297309 [details] Patch Clearing flags on attachment: 297309 Committed r209916: <http://trac.webkit.org/changeset/209916>
WebKit Commit Bot
Comment 3 2016-12-16 03:51:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.