[GStreamer][MSE] Fix build warning in MediaPlayerPrivateGStreamer.cpp using gcc 6.2 https://bugs.webkit.org/show_bug.cgi?id=165900

Reviewed by Žan Doberšek.

* platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp:
(WebCore::MediaPlayerPrivateGStreamerMSE::supportsCodecs):
Move the variable asignation out of the if condition.


Canonical link: https://commits.webkit.org/183549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209916 268f45cc-cd09-0410-ab3c-d52691b4dbfc